To do

2015-01-20
    o Fixup line longer than 72 chars in lbfgsb.f. Undeclared
      integer itask in errclb subroutine. Thanks to Berend Hasselman.

New package lbfgsb3 2014.7.31
