@@ -1,8 +1,8 @@
 Package: lbfgsb3
 Type: Package
 Title: Limited Memory BFGS Minimizer with Bounds on Parameters
-Version: 2017-9.21
-Date: 2017-09-22
+Version: 2018-3.28
+Date: 2018-03-28
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
               c("aut", "cre"), email = "nashjc@uottawa.ca"),
               person(given = "Ciyou", family = "Zhu", role = "aut"), 
