@@ -24,12 +24,11 @@
    allpkg <- c("Rvmmin", "stats","ipoptr")
    
    print(checksolver("nlminb", allmeth, allpkg))
-   # If Rvmmin NOT available, get mst that PACKAGE not available.
+   # If Rvmmin NOT available, get msg that PACKAGE not available.
    print(checksolver("Rvmmin", allmeth, allpkg))
    # Get message that SOLVER not found
    print(checksolver("notasolver", allmeth, allpkg))
 
-}
 }
 \keyword{nonlinear}
 \keyword{optimize}
